Use Java 17 string formatting